engine-net-2/examples/Errors/SequenceParametersInNumberMismatch.grs
new graph "Rules.grg"

exec (n:N)=init ;> (m:M)=s()

quit
